k8s/hydra/hydra/base/deployment.hydra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
  labels:
    application: hydra
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 1
  selector:
    matchLabels:
      application: hydra
  template:
    metadata:
      labels:
        application: hydra
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: application
                    operator: In
                    values:
                    - hydra
                topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 60
      volumes:
        - name: hydra-data
          persistentVolumeClaim:
            claimName: hydra-data
        - name: hydra-secret
          secret:
            secretName: hydra-secret
      containers:
        - name: hydra
          image: oryd/hydra:v1.0.0-rc.6_oryOS.10-alpine
          command: ["hydra", "serve", "all", "--dangerous-force-http"]
          ports:
          - name: public-port
            containerPort: 4444
          - name: admin-port
            containerPort: 4445
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: hydra-data
              mountPath: hydra-data
