k8s/hydra/hydra/base/service.hydra-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-admin-service
  labels:
    application: hydra
spec:
  ports:
  - name: admin
    protocol: TCP
    port: 80
    targetPort: 4445
  selector:
    application: hydra
