k8s/hydra/hydra/base/service.hydra.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-service
  labels:
    application: hydra
spec:
  ports:
  - name: public
    protocol: TCP
    port: 80
    targetPort: 4444
  selector:
    application: hydra
