k8s/hydra/hydra/base/ingress.hydra.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hydra-public-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - http:
      paths:
      - backend:
          serviceName: hydra-service
          servicePort: 80
      - backend:
          serviceName: hydra-admin-service
          servicePort: 80
